--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartPikApp">
+
         <activity android:name=".MainActivity">
+
+            <meta-data
+                android:name="com.google.mlkit.vision.DEPENDENCIES"
+                android:value="ocr" />
+            <!-- To use multiple models: android:value="ocr,model2,model3" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
