--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,33 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'com.google.android.gms:play-services-tasks:17.2.1'
+    testImplementation 'junit:junit:4.+'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.camera:camera-core:1.0.0-beta05"
+    implementation "androidx.camera:camera-camera2:1.0.0-beta05"
+    implementation "androidx.camera:camera-lifecycle:1.0.0-beta05"
+    implementation "androidx.camera:camera-view:1.0.0-alpha12"
+    
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
+
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition-common:16.0.0'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
+
+    implementation 'androidx.camera:camera-lifecycle:1.0.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
+    implementation 'androidx.camera:camera-view:1.0.0-alpha12@aa'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     def cameraxVersion = "1.0.0-alpha02"
     implementation "androidx.camera:camera-core:${cameraxVersion}"
