--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ plugins {
 }
 
 android {
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:26.1.0'
+    }
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
@@ -35,40 +38,27 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.google.android.gms:play-services-tasks:17.2.1'
     testImplementation 'junit:junit:4.+'
-    implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
     implementation "androidx.camera:camera-core:1.0.0-beta05"
     implementation "androidx.camera:camera-camera2:1.0.0-beta05"
     implementation "androidx.camera:camera-lifecycle:1.0.0-beta05"
     implementation "androidx.camera:camera-view:1.0.0-alpha12"
-    
+
     implementation 'com.google.firebase:firebase-analytics'
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-common:16.0.0'
-    implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
 
-    implementation 'androidx.camera:camera-lifecycle:1.0.2'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
-    implementation 'androidx.camera:camera-view:1.0.0-alpha12@aa'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    def cameraxVersion = "1.0.0-alpha02"
-    implementation "androidx.camera:camera-core:${cameraxVersion}"
-    implementation "androidx.camera:camera-camera2:${cameraxVersion}"
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
 
-        // Import the BoM for the Firebase platform
+    // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
-        // Declare the dependency for the Analytics library
-        // When using the BoM, you don't specify versions in Firebase library dependencies
+    // Declare the dependency for the Analytics library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-analytics'
 }
 
