--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:1.0.0-beta05"
     implementation "androidx.camera:camera-view:1.0.0-alpha12"
 
+    implementation 'org.pytorch:pytorch_android_lite:1.9.0'
+    implementation 'org.pytorch:pytorch_android_torchvision:1.9.0'
+
     implementation 'com.google.firebase:firebase-analytics'
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
